internal/ingress-cookie-setter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookie-setter
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: k8s-dashboard-cookie-setter
                port:
                  number: 80
            path: /jweToken.html
            pathType: Exact
